# rustc-tool-template

./: .envrc  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
src/: analysis.rs  compile_util.rs  lib.rs  plugin.rs  transform.rs  utils.rs
