[package]
name = "tool"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
rustc_plugin = "=0.10.0-nightly-2024-05-20"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[package.metadata.rust-analyzer]
rustc_private = true
